# myelevate

./: 0README.rst  README.md  README.rst  pyproject.toml  setup.py
myelevate/: __init__.py  posix.py  windows.py
