[tool.poetry]
name = "myelevate"
version = "0.1.3"
description = "Python library for requesting root privileges"
authors = ["tct123 <42028373+tct123@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/Creative-Media-Group/myelevate"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
